--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <div class="logo">Logo</div>
+      <div class="logo">Casamentos Felizes</div>
       <nav>
         <ul>
           <li><a href="inicio.html">Início</a></li>
