--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,7 @@
       <div class="logo">Casamentos Felizes</div>
       <nav>
         <ul>
-          <li><a href="inicio.html">Início</a></li>
+          <li><a href="index.html">Início</a></li>
           <li><a href="historia.html">Nossa história</a></li>
           <li><a href="galeria_eventos.html">Galeria de Eventos</a></li>
           <li><a href="contato.html">Contate-nos</a></li>
