Landing page atualizada. Diversas funcionalidades implementadas.

--- a/contato.html
+++ b/contato.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contate-nos - Casamentos Felizes</title>
-    <link rel="stylesheet" href="style-contato.css" />
+    <link rel="stylesheet" href="./assets/css/style-contato.css" />
   </head>
   <body>
     <header>
       <div class="logo">Casamentos Felizes</div>
       <nav>
         <ul>
-          <li><a href="index.html">Início</a></li>
-          <li><a href="historia.html">Nossa história</a></li>
-          <li><a href="galeria_eventos.html">Galeria de Eventos</a></li>
-          <li><a href="contato.html">Contate-nos</a></li>
+          <li><a href="index.html" class="ajax-link">Início</a></li>
+          <li><a href="index.html#historia" class="ajax-link">Nossa história</a></li>
+          <li><a href="index.html#galeria" class="ajax-link">Galeria de Eventos</a></li>
         </ul>
       </nav>
     </header>
@@ -36,16 +35,6 @@
             <button type="submit" id="btn-enviar">Enviar</button>
           </form>
         </div>
-
-        <div class="contact-details">
-          <h2>Informações de Contato</h2>
-          <p>
-            Entre em contato conosco para mais informações sobre nossos serviços de casamento.
-            Estamos aqui para tornar seu dia especial ainda mais memorável.
-          </p>
-          <p>Email: contato@casamentosfelizes.com</p>
-          <p>Telefone: (11) 1234-5678</p>
-        </div>
       </section>
     </main>
     <div id="modal" class="modal">
@@ -55,6 +44,18 @@
       </div>
     </div>
 
-    <script src="./script.js"></script>
+    <footer>
+      <div class="contact-details">
+        <h2>Informações de Contato</h2>
+        <p>
+          Entre em contato conosco para mais informações sobre nossos serviços de casamento. Estamos
+          aqui para tornar seu dia especial ainda mais memorável.
+        </p>
+        <p>Email: contato@casamentosfelizes.com</p>
+        <p>Telefone: (11) 1234-5678</p>
+      </div>
+    </footer>
+
+    <script src="./assets/js/script-contato.js"></script>
   </body>
 </html>
