Responsividade melhorada e CRUD adicionado

--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,7 @@
 
     <main>
       <section class="contact">
-        <h1>Contate-nos</h1>
+        <h1>Faça seu pedido</h1>
         <div class="contact-form">
           <form action="#" method="POST">
             <label for="name">Nome:</label>
@@ -29,10 +29,10 @@
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required />
 
-            <label for="message">Mensagem:</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
+            <label for="description">Como deseja que seja o seu casamento:</label>
+            <textarea id="description" name="description" rows="4" required></textarea>
 
-            <button type="submit" id="btn-enviar">Enviar</button>
+            <button type="submit" id="btn-enviar">Concluir pedido</button>
           </form>
         </div>
       </section>
