Implementado API simulada para o CRUD

--- a/contato.html
+++ b/contato.html
@@ -36,6 +36,12 @@
           </form>
         </div>
       </section>
+      <section id="orders">
+        <h2>Pedidos Recentes</h2>
+        <div id="order-list">
+          <!-- Pedidos serão exibidos aqui -->
+        </div>
+      </section>
     </main>
     <div id="modal" class="modal">
       <div class="modal-content">
@@ -55,7 +61,7 @@
         <p>Telefone: (11) 1234-5678</p>
       </div>
     </footer>
-
+    <script src="./assets/js/api.js"></script>
     <script src="./assets/js/script-contato.js"></script>
   </body>
 </html>
